grammar.js
        document: $ => repeat(
            choice(
                $.heading,
                $.strong_delimiting_modifier,
                $.non_structural,
            ),
        ),

        _word: $ => prec.right(repeat1($._character)),
        _whitespace: _ => token(/[\t                　]+/),

        escape_sequence: $ => seq(
            "\\",
            alias(/./, $.escape_char),
        ),

        // TODO: Fix `hello ,*world*` failing`
        // TODO: Fix `:*hello*` not printing any bold
        // perhaps do something like `alias(":", $._word)`?
        paragraph_segment: $ => seq(
            choice(
                $._word,
                $.escape_sequence,
                seq(
                    optional(
                        seq(
                            $._word,
                            $.link_modifier,
                        ),
                    ),
                    prec.dynamic(1, $.attached_modifier),
                    optional(
                        seq(
                            $.link_modifier,
                            $._word,
                        ),
                    ),
                ),
            ),
            repeat(
                choice(
                    seq(
                        $._whitespace,
                        choice(
                            $._word,
                            $._whitespace,
                            $.escape_sequence,
                            prec.dynamic(1, $.attached_modifier),
                            $._attached_modifier_conflict,
                            seq(
                                optional(
                                    seq(
                                        $._word,
                                        $.link_modifier,
                                    ),
                                ),
                                prec.dynamic(1, $.attached_modifier),
                                optional(
                                    seq(
                                        $.link_modifier,
                                        $._word,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    choice(
                        $._word,
                        $.escape_sequence,
                        $._attached_modifier_conflict,
                    ),
                ),
            ),
        ),

        paragraph: $ => prec.right(seq(
            $.paragraph_segment,
            repeat(
                seq(
                    newline,
                    $.paragraph_segment,
                ),
            ),
            newline_or_eof,
            // TODO: deal with https://github.com/nvim-neorg/norg-specs/issues/8
        )),

        heading1: $ => heading($, 1),
        heading2: $ => heading($, 2),
        heading3: $ => heading($, 3),
        heading4: $ => heading($, 4),
        heading5: $ => heading($, 5),
        heading6: $ => heading($, 6),

        bold: $ => prec.dynamic(1, attached_mod($, "bold", false)),
        italic: $ => prec.dynamic(1, attached_mod($, "italic", false)),
        strikethrough: $ => prec.dynamic(1, attached_mod($, "strikethrough", false)),
        underline: $ => prec.dynamic(1, attached_mod($, "underline", false)),
        spoiler: $ => prec.dynamic(1, attached_mod($, "spoiler", false)),
        verbatim: $ => prec.dynamic(1, attached_mod($, "verbatim", true)),
        superscript: $ => prec.dynamic(1, attached_mod($, "superscript", false)),
        subscript: $ => prec.dynamic(1, attached_mod($, "subscript", false)),
        inline_comment: $ => prec.dynamic(1, attached_mod($, "inline_comment", false)),
        inline_math: $ => prec.dynamic(1, attached_mod($, "inline_math", true)),
        inline_macro: $ => prec.dynamic(1, attached_mod($, "inline_macro", true)),

        _attached_modifier_conflict: $ => choice(
            $._bold_open,
            $._italic_open,
            $._strikethrough_open,
            $._underline_open,
            $._spoiler_open,
            $._superscript_open,
            $._subscript_open,
            $._inline_comment_open,
            $._inline_math_open,
            $._inline_macro_open,
        ),

        link_modifier: _ => ":",
