test/corpus/headings.txt
================================================================================
Level 1 Heading
================================================================================
* Heading Title!
--------------------------------------------------------------------------------

(document
  (heading1
    (prefix)
    (paragraph_segment
      (word)
      (word))))

================================================================================
Level 2 Heading
================================================================================
** Heading Title!
--------------------------------------------------------------------------------

(document
  (heading2
    (prefix)
    (paragraph_segment
      (word)
      (word))))

================================================================================
Level 3 Heading
================================================================================
*** Heading Title!
--------------------------------------------------------------------------------

(document
  (heading3
    (prefix)
    (paragraph_segment
      (word)
      (word))))

================================================================================
Level 4 Heading
================================================================================
**** Heading Title!
--------------------------------------------------------------------------------

(document
  (heading4
    (prefix)
    (paragraph_segment
      (word)
      (word))))

================================================================================
Level 5 Heading
================================================================================
***** Heading Title!
--------------------------------------------------------------------------------

(document
  (heading5
    (prefix)
    (paragraph_segment
      (word)
      (word))))

================================================================================
Level 6 Heading
================================================================================
****** Heading Title!
--------------------------------------------------------------------------------

(document
  (heading6
    (prefix)
    (paragraph_segment
      (word)
      (word))))

================================================================================
Nested Headings
================================================================================
** Heading 2
*** Heading 3
**** Heading 4
** Heading 2
* Heading 1
****** Heading 6
--------------------------------------------------------------------------------

(document
  (heading2
    (prefix)
    (paragraph_segment
      (word)
      (word))
    (heading3
      (prefix)
      (paragraph_segment
        (word)
        (word))
      (heading4
        (prefix)
        (paragraph_segment
          (word)
          (word)))))
  (heading2
    (prefix)
    (paragraph_segment
      (word)
      (word)))
  (heading1
    (prefix)
    (paragraph_segment
      (word)
      (word))
    (heading6
      (prefix)
      (paragraph_segment
        (word)
        (word)))))

================================================================================
Headings Starting With Level Greater than 1
================================================================================
***** Level 5 Heading
--------------------------------------------------------------------------------

(document
  (heading5
    (prefix)
    (paragraph_segment
      (word)
      (word)
      (word))))
